updated SslMqttCredentials, refactored